# cqrs-event-driven-architecture

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
read_side/: heartbeat.py  main.py  projector.py  service_registration.py  settings.py
read_side/database/: dependencies.py  init_db.py  session.py
read_side/models/: account.py
registry/: cleanup.py  main.py  requirements.txt
write_side/: discovery.py  manage.py
write_side/accounts/: aggregates.py  events.py  models.py  repository.py  views.py
write_side/accounts/migrations/: 0001_initial.py
write_side/write_side/: asgi.py  settings.py  urls.py  wsgi.py
